--- a/config/.git-rc
+++ b/config/.git-rc
@@ -23,3 +23,11 @@ alias gagi="g agi"
 
 alias gaps="g aps"
 alias grcp="g rcp"
+
+alias gsid="g sid"
+alias ggid="g gid"
+
+alias gue="g ue"
+alias gun="g un"
+alias ggue="g gue"
+alias ggun="g gun"
