--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -10,8 +10,11 @@ alias gdn="g dn"
 alias gdno="g dno"
 alias gdns="g dns"
 alias gdp="g dp"
+alias gdph="g dph"
 alias gdps="g dps"
+alias gdq="g dq"
 alias gds="g ds"
+alias gdcs="g dcs"
 alias gdsc="g dsc"
 alias gdsh="g dsh"
 alias gdsp="g dsp"
