--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -1,10 +1,13 @@
+alias gfes="g fes"
 alias gftd="g ftd"
 alias gis="g is"
 alias gism="g ism"
 alias gps="g ps"
 alias gsf="g sf"
+alias gsfv="g sfv"
 alias gsm="g sm"
 alias gsma="g sma"
+alias gsmd="g smd"
 alias gsmcc="g smcc"
 alias gsmf="g smf"
 alias gsmi="g smi"
