remote ssh/https url toggling, github org cloning, clone+cd, add aliases

--- a/fetch/.gitconfig
+++ b/fetch/.gitconfig
@@ -1,5 +1,6 @@
 [alias]
   f   = fetch --tags
+  ff  = fetch --force --tags
   ft  = fetch --tags
   fa  = fetch --tags --all
   fta = fetch --tags --all
