--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -4,8 +4,13 @@
 
   dfr       = default-remote
 
+  gor       = get-only-remote
+
   ra        = remote add
   rao       = remote add origin
+  rah       = remote-add.py --https
+  ras       = remote-add.py --ssh
+  rat       = remote-add.py
   rau       = remote add upstream
 
   re        = remote-exists
