submodule sha helpers

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -7,17 +7,22 @@ alias gsf="g sf"
 alias gsfv="g sfv"
 alias gsm="g sm"
 alias gsma="g sma"
-alias gsmd="g smd"
 alias gsmcc="g smcc"
+alias gsmd="g smd"
 alias gsmf="g smf"
+alias gsmh="g smh"
 alias gsmi="g smi"
+alias gsmid="g smid"
+alias gsmir="g smir"
 alias gsml="g sml"
 alias gsmlp="g smlp"
 alias gsmp="g smp"
 alias gsms="g sms"
+alias gsmsh="g smsh"
+alias gsmsha="g smsha"
+alias gsmshs="g smshs"
 alias gsmst="g smst"
 alias gsmt="g smt"
-alias gsmir="g smir"
 alias gsmu="g smu"
 alias gsmuf="g smuf"
 alias gsmuq="g smuq"
