--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -2,6 +2,7 @@ alias gfes="g fes"
 alias gftd="g ftd"
 alias gis="g is"
 alias gism="g ism"
+alias gsmlg="g smlg"
 alias gps="g ps"
 alias gsf="g sf"
 alias gsfv="g sfv"
