submodule foreach aliases

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -16,7 +16,9 @@ alias gsmi="g smi"
 alias gsmid="g smid"
 alias gsmir="g smir"
 alias gsml="g sml"
+alias gsmlf="g smlf"
 alias gsmlp="g smlp"
+alias gsmn="g smn"
 alias gsmp="g smp"
 alias gsms="g sms"
 alias gsmsh="g smsh"
