--- a/submodule/.gitconfig
+++ b/submodule/.gitconfig
@@ -8,10 +8,10 @@
   sms   = submodules
   smst  = submodule status
   smt   = submodule status
-  fes   = submodule foreach --quiet
-  sf    = submodule foreach --quiet
-  sfv   = submodule foreach
-  smf   = submodule foreach --quiet
+  fes   = submodule foreach --recursive --quiet
+  sf    = submodule foreach --recursive --quiet
+  sfv   = submodule foreach --recursive
+  smf   = submodule foreach --recursive --quiet
   ssh   = submodule-shas
   sst   = submodule-shas
   smu   = submodule update
@@ -31,9 +31,11 @@
   sur   = submodule update --recursive
   surq  = submodule update  --recursive --quiet
   smcc  = submodule-check-commits
-  sml   = submodule foreach --quiet 'echo $name'
-  smp   = submodule foreach --quiet 'echo $path'
-  smlp  = submodule foreach --quiet 'echo $name $path $sha1'
+  sml   = submodule foreach --quiet --recursive 'echo $displaypath'
+  smn   = submodule foreach --quiet 'echo $name'
+  smp   = submodule foreach --quiet --recursive 'echo $displaypath'
+  smlf  = submodule foreach --quiet --recursive 'echo $name $displaypath $sha1'
+  smlp  = submodule foreach --quiet --recursive 'echo $name $displaypath $sha1'
   ism   = is-submodule
   is    = is-submodule
   ftd = filter-to-dir
