more global gitignore aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -9,6 +9,10 @@ alias gcfi="g cfi"
 alias gcgi="g cgi"
 alias gcfig="g cfig"
 alias gcgig="g cgig"
+alias gcfis="g cfis"
+alias gcgis="g cgis"
+alias gcfia="g cfia"
+alias gcgia="g cgia"
 alias gcfl="g cfl"
 alias gcgl="g cgl"
 alias gcfs="g cfs"
