--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -2,6 +2,9 @@ alias gfes="g fes"
 alias gftd="g ftd"
 alias gis="g is"
 alias gism="g ism"
+alias gsg="g sg"
+alias gslg="g slg"
+alias gsmg="g smg"
 alias gsmlg="g smlg"
 alias gps="g ps"
 alias gsf="g sf"
