--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -6,6 +6,7 @@ alias grs.="g reset ."
 alias grp="g rp"
 alias grh="g rh"
 alias grhh="g rhh"
+alias grhp="g rhp"
 alias grs="g rs"
 alias grrs="g rrs"
 alias grsf="g rsf"
