--- a/reset/.gitconfig
+++ b/reset/.gitconfig
@@ -5,5 +5,6 @@
   rp = reset -p
   rh = reset-hard
   rhh = reset --hard HEAD
+  rhp = reset --hard HEAD^
   rrs = reverse-reset
   rsf = checkout HEAD --
