ls-tree, diff aliases

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -23,6 +23,7 @@ alias gdsu="g dsu"
 alias gdt="g dt"
 alias gdtp="g dtp"
 alias gdu="g du"
+alias gdw="g dw"
 
 alias ghc="g hc"
 alias ghnc="g hnc"
