--- a/stash/.git-rc
+++ b/stash/.git-rc
@@ -4,9 +4,19 @@ alias gss="g ss"
 alias gsa="g sa"
 alias gsd="g sd"
 alias gsp="g sp"
+alias gsp1="g sp1"
+alias gsp2="g sp2"
+alias gsp3="g sp3"
+alias gsp4="g sp4"
+alias gsp5="g sp5"
 alias gsl="g sl"
 alias gss="g ss"
 alias gssk="g ssk"
 alias gsk="g sk"
 alias gssp="g ssp"
 alias gsth="g sth"
+alias gsw="g sw"
+alias gsw0="g sw0"
+alias gsw1="g sw1"
+alias gsw2="g sw2"
+alias gsw3="g sw3"
