bisect, squash helpers

--- a/bisect/.git-rc
+++ b/bisect/.git-rc
@@ -3,8 +3,12 @@
 alias gbs="g bs"
 alias gbsb="g bsb"
 alias gbsg="g bsg"
+alias gbsn="g bsn"
+alias gbrr="g brr"
 alias gbsr="g bsr"
 alias gbss="g bss"
+alias gbsx="g bsx"
+alias gbssr="g bssr"
 alias gbcag="git bcag"
 alias gbcbb="git bcbb"
 alias gbeb="git beb"
