clone, squash, octomerge, push, rebase helpers

--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -23,6 +23,7 @@
   cppam = commit-push-parents -a -m
   cppm  = commit-push-parents -m
   fua   = fixup-author
+  om    = octomerge
   pp    = commit-push-parents
   ppa   = commit-push-parents -a
   ppam  = commit-push-parents -a -m
