add git-submodule-commits helper for logging decorated submodule commits

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -11,6 +11,7 @@ alias gsf="g sf"
 alias gsfv="g sfv"
 alias gsm="g sm"
 alias gsma="g sma"
+alias gsmc="g smc"
 alias gsmcc="g smcc"
 alias gsmd="g smd"
 alias gsmf="g smf"
