add, rebase helpers

--- a/add/.git-rc
+++ b/add/.git-rc
@@ -2,6 +2,8 @@
 alias ga="g a"
 alias ga.="g a ."
 alias gaf="g af"
+alias gan="g an"
+alias gaN="g aN"
 alias gap="g ap"
 alias gap.="g ap ."
 alias gdma="g dma"
