--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -7,6 +7,7 @@ alias gdthc="g dthc"
 alias gpr="g pr"
 
 alias grb="g rb"
+alias grd="g rd"
 alias grba="g rba"
 alias grbc="g rbc"
 alias grbh="g rbh"
@@ -27,4 +28,5 @@ alias goc="g oc"
 alias goh="g oh"
 alias gshoc="g shoc"
 alias gshoh="g shoh"
+alias gshrh="g shrh"
 alias gsqsq="g sqsq"
