--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -5,6 +5,11 @@ alias gc="g c"
 alias gca="g ca"
 alias gcam="g cam"
 alias gcaam="g caam"
+alias gcbn="g cbn"
+alias gcbns="g cbns"
+alias gcfn="g cfn"
+alias gcfns="g cfns"
+
 alias gcm="g cm"
 alias gcmp="g cmp"
 alias gcn="g cn"
