--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -2,12 +2,18 @@
   acm   = add-and-commit-msg
   c     = commit
   ca    = commit -a
+  cbn   = commit-basename
+  cbns   = commit-basenames
+  cfn   = commit-filename
+  cfns   = commit-filenames
   cm    = commit -m
   cne   = commit --no-edit
   cmp   = commit-multiple-parents
   caam  = commit -a --amend -m
   cam   = commit -a -m
+  can   = commit --amend --no-edit
   cane  = commit --amend --no-edit
+  caan  = commit -a -u --amend --no-edit
   caane = commit -a -u --amend --no-edit
   scm   = squashed-commit-message
   cn    = commit --amend
