add `git diff … --submodule=short` aliases

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -5,6 +5,7 @@ alias gda="g da"
 alias gdas="g das"
 alias gdft="g dft"
 alias gdc="g dc"
+alias gdcss="g dcss"
 alias gdh="g diff HEAD"
 alias gdn="g dn"
 alias gdno="g dno"
@@ -19,6 +20,7 @@ alias gdsc="g dsc"
 alias gdsh="g dsh"
 alias gdsp="g dsp"
 alias gdsph="g dsph"
+alias gdss="g dss"
 alias gdsu="g dsu"
 alias gdt="g dt"
 alias gdtp="g dtp"
