branch, push aliases

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -5,6 +5,10 @@ alias gbD="g bD"
 alias gbdf="g bdf"
 
 alias gbf="g bf"
+
+alias gbpa="g bpa"
+alias gbpar="g bpar"
+
 alias gbrs="g brs"
 alias gbrh="g brh"
 
