--- a/push/.git-rc
+++ b/push/.git-rc
@@ -16,6 +16,7 @@ alias gpx="g px"
 alias gput="g put"
 alias gptu="g ptu"
 alias gpot="g pot"
+alias gpsu="g psu"
 alias gpto="g pto"
 
 alias gspf="g spf"
