--- a/stash/.git-rc
+++ b/stash/.git-rc
@@ -2,7 +2,6 @@
 
 alias gss="g ss"
 alias gsa="g sa"
-alias gsd="g sd"
 alias gsp="g sp"
 alias gsp1="g sp1"
 alias gsp2="g sp2"
@@ -14,6 +13,7 @@ alias gss="g ss"
 alias gssk="g ssk"
 alias gsk="g sk"
 alias gssp="g ssp"
+alias gstd="g std"
 alias gsth="g sth"
 alias gsw="g sw"
 alias gsw0="g sw0"
