git-submodule-auto-commit helper

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -7,6 +7,8 @@ alias gslg="g slg"
 alias gsmg="g smg"
 alias gsmlg="g smlg"
 alias gps="g ps"
+alias gsac="g sac"
+alias gsmac="g smac"
 alias gsf="g sf"
 alias gsfv="g sfv"
 alias gsm="g sm"
