improve checkout+rebase, submodule-autocommit

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -8,6 +8,7 @@ alias gsmg="g smg"
 alias gsmlg="g smlg"
 alias gps="g ps"
 alias gsac="g sac"
+alias gsaca="g saca"
 alias gsmac="g smac"
 alias gsf="g sf"
 alias gsfv="g sfv"
