branch-reset improvements

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -5,6 +5,8 @@ alias gbD="g bD"
 alias gbdf="g bdf"
 
 alias gbf="g bf"
+alias gbfc="g bfc"
+alias gbc="g bc"
 
 alias gbpa="g bpa"
 alias gbpar="g bpar"
