--- a/branch/.gitconfig
+++ b/branch/.gitconfig
@@ -15,6 +15,8 @@
   bmv = branch -m
 
   bf = branch-reset
+  bfc = branch-reset -c
+  bc = branch-reset -c
   brs = branch-reset
   brh = branch-reset
   branch-set = branch-reset
