--- a/show/.git-rc
+++ b/show/.git-rc
@@ -5,8 +5,11 @@ alias gsh="g sh"
 alias gshf="g shf"
 alias gssf="g ssf"
 alias gshh="g shh"
+alias gshl="g shl"
 alias gshp="g shp"
 alias gshs="g shs"
+alias gshsl="g shsl"
+alias gshss="g shss"
 alias gsn="g sn"
 alias gsln="g sln"
 alias gsnl="g snl"
