add `gsrl` git-submodule-rebase-log helper

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -39,6 +39,8 @@ alias gsmuq="g smuq"
 alias gsmur="g smur"
 alias gsmurq="g smurq"
 alias gsmurr="g smurr"
+alias gsrl="g srl"
+alias gsrlv="g srlv"
 alias gssh="g ssh"
 alias gsst="g sst"
 alias gsu="g su"
