--- a/show/.git-rc
+++ b/show/.git-rc
@@ -5,6 +5,7 @@ alias gsh="g sh"
 alias gshf="g shf"
 alias gssf="g ssf"
 alias gshh="g shh"
+alias gshd="g shd"
 alias gshl="g shl"
 alias gshp="g shp"
 alias gshs="g shs"
