--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -7,6 +7,7 @@ alias gdb="g db"
 alias gdbr="g dbr"
 alias gdft="g dft"
 alias gdc="g dc"
+alias gdcp="g dcp"
 alias gdcss="g dcss"
 alias gdh="g diff HEAD"
 alias gdn="g dn"
