--- a/diff/.gitconfig
+++ b/diff/.gitconfig
@@ -1,5 +1,7 @@
 [alias]
   d    = diff
+  dd   = diff --submodule=diff
+  dsd  = diff --submodule=diff
   da   = diff-pipe
   das  = diff-pipe sort
   db   = diff-branch-reflog
