add git submodule reset helper

--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -3,6 +3,7 @@
 alias grsp="g rsp"
 alias gr.="g reset ."
 alias grs.="g reset ."
+alias grss="g rss"
 alias grp="g rp"
 alias grh="g rh"
 alias grhh="g rhh"
