diff, submodule aliases

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -3,6 +3,8 @@
 alias gd="g d"
 alias gdd="g dd"
 alias gdsd="g dsd"
+alias gdl="g dl"
+alias gdsl="g dsl"
 alias gda="g da"
 alias gdas="g das"
 alias gdb="g db"
