--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -27,6 +27,8 @@ alias gsmlf="g smlf"
 alias gsmlp="g smlp"
 alias gsmn="g smn"
 alias gsmp="g smp"
+alias gsmr="g smr"
+alias gsmrs="g smrs"
 alias gsms="g sms"
 alias gsmsh="g smsh"
 alias gsmsha="g smsha"
