--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -1,51 +1,53 @@
-alias gfes="g fes"
-alias gftd="g ftd"
-alias gis="g is"
-alias gism="g ism"
-alias gsg="g sg"
-alias gslg="g slg"
-alias gsmg="g smg"
-alias gsmlg="g smlg"
 alias gps="g ps"
 alias gsac="g sac"
 alias gsaca="g saca"
 alias gsmac="g smac"
-alias gsf="g sf"
-alias gsfv="g sfv"
 alias gsm="g sm"
 alias gsma="g sma"
 alias gsmc="g smc"
-alias gsmcc="g smcc"
 alias gsmd="g smd"
-alias gsmf="g smf"
-alias gsmh="g smh"
 alias gsmi="g smi"
-alias gsmid="g smid"
-alias gsmir="g smir"
-alias gsml="g sml"
-alias gsmlf="g smlf"
-alias gsmlp="g smlp"
-alias gsmn="g smn"
-alias gsmp="g smp"
+alias gsg="g sg"
+alias gslg="g slg"
+alias gsmg="g smg"
+alias gsmlg="g smlg"
+alias gsms="g sms"
+alias gsmst="g smst"
+alias gsmt="g smt"
+alias gfes="g fes"
+alias gsf="g sf"
+alias gsfv="g sfv"
+alias gsmf="g smf"
+alias gsrl="g srl"
+alias gsrlv="g srlv"
+alias gssh="g ssh"
+alias gsst="g sst"
 alias gsmr="g smr"
 alias gsmrs="g smrs"
-alias gsms="g sms"
+alias gsmir="g smir"
+alias gsmh="g smh"
+alias gsmid="g smid"
 alias gsmsh="g smsh"
 alias gsmsha="g smsha"
 alias gsmshs="g smshs"
-alias gsmst="g smst"
-alias gsmt="g smt"
 alias gsmu="g smu"
 alias gsmuf="g smuf"
 alias gsmuq="g smuq"
 alias gsmur="g smur"
 alias gsmurq="g smurq"
 alias gsmurr="g smurr"
-alias gsrl="g srl"
-alias gsrlv="g srlv"
-alias gssh="g ssh"
-alias gsst="g sst"
+alias gsmus="g smus"
 alias gsu="g su"
 alias gsuq="g suq"
 alias gsur="g sur"
+alias gsus="g sus"
 alias gsurq="g surq"
+alias gsmcc="g smcc"
+alias gsml="g sml"
+alias gsmn="g smn"
+alias gsmp="g smp"
+alias gsmlf="g smlf"
+alias gsmlp="g smlp"
+alias gism="g ism"
+alias gis="g is"
+alias gftd="g ftd"
