--- a/submodule/.gitconfig
+++ b/submodule/.gitconfig
@@ -25,21 +25,23 @@
   sst   = submodule-shas
   smr   = !git reset . && git submodule update --recursive
   smrs  = !git reset . && git submodule update --recursive && git status
-  smu   = submodule update
   smir  = !git submodule init && git submodule update --recursive
   smh   = submodule-sha
   smid  = submodule-sha
   smsh  = submodule-sha
   smsha = submodule-sha
   smshs = submodule-shas
+  smu   = submodule update --recursive
   smuf  = submodule update --recursive --rebase
-  smur  = submodule update --recursive --init
-  smurr = submodule update --recursive --rebase
   smuq  = submodule update --quiet
+  smur  = submodule update --recursive --init
   smurq = submodule update --recursive --quiet
-  su    = submodule update
+  smurr = submodule update --recursive --rebase
+  smus  = submodule update
+  su    = submodule update --recursive
   suq   = submodule update --quiet
   sur   = submodule update --recursive
+  sus   = submodule update
   surq  = submodule update  --recursive --quiet
   smcc  = submodule-count-commits
   sml   = submodule foreach --quiet --recursive 'echo $displaypath'
@@ -49,4 +51,4 @@
   smlp  = submodule foreach --quiet --recursive 'echo $name $displaypath $sha1'
   ism   = is-submodule
   is    = is-submodule
-  ftd = filter-to-dir
+  ftd   = filter-to-dir
