submodule reset+update aliases

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -24,6 +24,8 @@ alias gssh="g ssh"
 alias gsst="g sst"
 alias gsmr="g smr"
 alias gsmrs="g smrs"
+alias gsr="g sr"
+alias gsrs="g srs"
 alias gsmir="g smir"
 alias gsmh="g smh"
 alias gsmid="g smid"
