submodule update -f aliases

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -40,6 +40,7 @@ alias gsmurq="g smurq"
 alias gsmurr="g smurr"
 alias gsmus="g smus"
 alias gsu="g su"
+alias gsuf="g suf"
 alias gsuq="g suq"
 alias gsur="g sur"
 alias gsus="g sus"
