rm, rebase-msg helpers

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -34,7 +34,9 @@ alias garc='g arc'
 
 alias goc="g oc"
 alias goh="g oh"
+alias grhm="g rhm"
 alias gshoc="g shoc"
 alias gshoh="g shoh"
 alias gshrh="g shrh"
+alias gshrm="g shrm"
 alias gsqsq="g sqsq"
